--- a/src/components/landing/B2B.astro
+++ b/src/components/landing/B2B.astro
@@ -184,7 +184,7 @@ const services: LegoPiece[] = [
 			</div>
 			<div class="text-lg leading-[1.875rem]">
 				To see the kit in action, check out <a href="https://promptswithfriends.com"
-					>Prompts with Friends</a
+					>HR wizard</a
 				>&mdash;it's a SaaS app built with this kit that lets you collaborate on GPT prompts with
 				teammates.
 			</div>
