--- a/src/components/landing/faq.astro
+++ b/src/components/landing/faq.astro
@@ -69,7 +69,7 @@ import Layout from '../../layouts/Layout.astro';
 				<div class="w-full">
 					<div class="ml-5 leading-8">
 						<div class="text-4xl">
-							How come Prompts with Friends is an actual working app with payments enabled?
+							How come HR wizard is an actual working app with payments enabled?
 						</div>
 					</div>
 					<div class="ml-10 mt-5">
