--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -9,6 +9,6 @@ if (res.kind === 'response') {
 }
 ---
 
-<AppLayout title="Prompts with Friends">
+<AppLayout title="HR wizard">
 	<Root client:load getContext={() => res.context} />
 </AppLayout>
