--- a/src/pages/dashboard/jobs.astro
+++ b/src/pages/dashboard/jobs.astro
@@ -11,6 +11,6 @@ if (res.kind === 'response') {
 }
 ---
 
-<AppLayout title="HR wizard / List">
+<AppLayout title="Hr wizard / jobs / List">
 	<Root client:load dehydratedState={res.helpers.dehydrate()} getContext={() => res.context} />
 </AppLayout>
