--- a/src/pages/demo/trpc/custom_errors.astro
+++ b/src/pages/demo/trpc/custom_errors.astro
@@ -28,6 +28,6 @@ if (error instanceof TRPCError) {
 }
 ---
 
-<AppLayout title="Prompts with Friends / List">
+<AppLayout title="HR wizard / List">
 	<Root client:load dehydratedState={helpers.dehydrate()} />
 </AppLayout>
