--- a/src/pages/prompts/[promptId].astro
+++ b/src/pages/prompts/[promptId].astro
@@ -39,7 +39,7 @@ const info = (() => {
 		}
 	}
 	const authorName = author?.name || prompt.userId;
-	const title = x.prompt.prompt.title.trim() || 'Prompts with Friends';
+	const title = x.prompt.prompt.title.trim() || 'HR wizard';
 
 	const description = limitText(prompt.description, 70) + ' by ' + authorName;
 
