--- a/src/pages/setup/index.astro
+++ b/src/pages/setup/index.astro
@@ -53,7 +53,7 @@ for (const slug of checksOrder) {
 			<div class="w-full">
 				<div class="ml-10 leading-8">
 					<div class="text-3xl">Set up your own</div>
-					<div class="text-5xl">Prompts with Friends</div>
+					<div class="text-5xl">HR wizard</div>
 				</div>
 				{
 					import.meta.env.PROD && (
