--- a/src/pages/dashboard/settings.astro
+++ b/src/pages/dashboard/settings.astro
@@ -9,6 +9,6 @@ if (res.kind === 'response') {
 }
 ---
 
-<AppLayout title="Prompts with Friends / Settings">
+<AppLayout title="HR wizard / Settings">
 	<Root client:load getContext={() => res.context} />
 </AppLayout>
