--- a/src/pages/dashboard/support.astro
+++ b/src/pages/dashboard/support.astro
@@ -9,6 +9,6 @@ if (res.kind === 'response') {
 }
 ---
 
-<AppLayout title="Prompts with Friends / Support">
+<AppLayout title="HR wizard / Support">
 	<Root client:load getContext={() => res.context} />
 </AppLayout>
